--- a/proxy-example-new/client/public/server-side-app.html
+++ b/proxy-example-new/client/public/server-side-app.html
@@ -36,6 +36,10 @@
                 + data.access_token
                 + "'>Calling /api/notes</a>";
 
+        resourceUrl += "<p><a href='/api/explorer?access_token="
+                + data.access_token
+                + "'>Calling /api/explorer</a>";
+
 		displayMessage(resourceUrl);
 	}
 </script>
